testdata/invalid/invalid_bitflags_unknown_name_uint.bop
[flags]
enum Flags : uint8 {
    A = B;
}